k8s/bookings-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: booking-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        myevents/app: bookings
        myevents/tier: api
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '18282'
    spec:
      containers:
      - name: api
        image: maxsuelmarinho/my-events:booking-service-0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 8282
          name: http
        - containerPort: 18282
          name: metrics
      imagePullSecrets:
      - name: my-private-registry
