k8s/frontend-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        myevents/app: frontend
    spec:
      containers:
      - name: frontend
        image: maxsuelmarinho/my-events:frontend-0.2
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
