k8s/bookings-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookings-db
spec:
  clusterIP: None
  selector:
    myevents/app: bookings
    myevents/tier: database
  ports:
  - port: 27017
    name: mongo
