k8s/events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events
spec:
  selector:
    myevents/app: events
    myevents/tier: api
  ports:
  - port: 80
    targetPort: 8181
    name: http
