k8s/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  clusterIP: None
  selector:
    app: prometheus
  ports:
  - port: 9090
    name: http
