k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amqp-broker
spec:
  selector:
    myevents/app: amqp-broker
  ports:
  - port: 5672
    name: amqp
