k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myevents
spec:
  rules:
  - host: api.myevents.example
    http:
      paths:
      - path: /api/events
        backend:
          serviceName: events
          servicePort: 80
      - path: /api/bookings
        backend:
          serviceName: bookings
          servicePort: 80
  - host: www.myevents.example
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
